--- a/style.css
+++ b/style.css
@@ -25,19 +25,28 @@ ul {
   font-weight: bold;
 }
 
+.header-link {
+  transition: opacity 0.15s;
+}
+
+.header-link:hover {
+  cursor: pointer;
+  text-decoration: underline;
+  opacity: 0.7;
+}
+
 .content {
   background-color: #1f2937;
   color: white;
   padding: 2px;
   padding-top: 100px;
-}
-
-.site-information {
+  padding-bottom: 100px;
 }
 
 .site-description {
   display: flex;
-  gap: 50px;
+  flex-wrap: wrap;
+  gap: 30px;
   justify-content: center;
 }
 
@@ -76,7 +85,129 @@ ul {
 
 .image-container {
   padding: 10px;
+  width: 300px;
 }
 .image {
-  width: 360px;
+  width: 300px;
+  object-fit: cover;
+  border: 5px solid white;
+  border-radius: 5px;
+}
+
+.random-information {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  margin: 40px 0px;
+}
+
+.random-heading {
+  font-weight: 700;
+  font-size: 36px;
+  text-align: center;
+}
+
+.image-box-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 40px;
+  justify-content: center;
+  align-items: center;
+  margin: 30px 0;
+}
+
+.image-box {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  gap: 5px;
+  width: 150px;
+
+  margin-top: 20px;
+}
+
+.actual-image {
+  border: 5px solid #3882f6;
+  border-radius: 5px;
+  width: 141px;
+  height: 141px;
+  object-fit: cover;
+}
+
+.quote-section {
+  background-color: #e5e7eb;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.quote-container {
+  font-size: 36px;
+  font-weight: 300;
+  font-style: italic;
+  color: #1f2937;
+  width: 800px;
+  margin: 100px 20px;
+}
+
+.quote-name {
+  font-size: 25px;
+  font-style: normal;
+  font-weight: 700;
+  text-align: end;
+}
+
+.sign-up-section {
+  margin: 100px 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.sign-up-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #3882f6;
+  border-radius: 5px;
+  width: 1000px;
+  height: 150px;
+  margin: 0 15px;
+  padding: 0 25px;
+}
+
+.sign-up-title {
+  color: white;
+  font-weight: 700;
+  font-size: 20px;
+}
+
+.sign-up-description {
+  color: #e5e7eb;
+}
+
+.sign-up2 {
+  margin-left: 150px;
+  background-color: #3882f6;
+  color: white;
+  border: 0;
+  border: 1px solid;
+  border-radius: 5px;
+  font-size: 15px;
+  padding: 5px 20px;
+  transition: opacity 0.15s;
+}
+
+.sign-up2:hover {
+  cursor: pointer;
+  opacity: 0.6;
+}
+
+.footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #1f2937;
+  color: white;
+  height: 100px;
 }
